--- a/index.html
+++ b/index.html
@@ -1,50 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <link href="assets/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/Favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="image/Favicon.png">
-  <title>Weather Dasboard</title>
+    <title>Weather Dash</title>
 </head>
 
 <body>
-
-
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-6">Weather Dashboard</h1>
+    <nav class="navbar navbar-dark bg-success">
+        <a class="navbar-brand" href="#">
+            <i class="material-icons">wb_sunny</i>&nbsp;The Weather Dashboard</a>
+    </nav>
+    <div class="container-fluid">
+        <div class="row mt-3">
+            <div class="col-md-3 searcharea">
+                <h2 class="text-secondary">Search for a city:</h2>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="searchinput" type="search" aria-label="Search">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" id="searchbtn" type="submit">
+                            <i class="material-icons">search</i>
+                        </button>
+                    </div>
+                </div>
+                <div class="mt-5" id="prevSearches">
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="container" id="earthforecast">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
-  <div id="searchContainer">
-    <input class="searchControl" type="text" placeholder="City Name or Zipcode" id="searchInput">
-    <button class="searchControl" id="searchBtn">Search</button>
-  </div>
-
-  <div id="weatherContainer">
-    <div id="weatherDescription">
-      <h1 id="cityHeader"></h1>
-      <div id="weatherMain">
-        <div id="temperature"></div>
-        <div id="weatherDescriptionHeader"></div>
-        <div><img id="documentIconImg"></div>
-      </div>
-      <hr>
-      <div id="windSpeed" class="bottomDetails"></div>
-      <div id="humidity" class="bottomDetails"></div>
-    </div>
-  </div>
-
-
-  <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
