Added missing bootstrap link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link href="assets/style.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/Favicon.png">
+    <link rel="icon" type="image/png" href="assets/Favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,10 +15,6 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-success">
-        <a class="navbar-brand" href="#">
-            <i class="material-icons">wb_sunny</i>&nbsp;The Weather Dashboard</a>
-    </nav>
     <div class="container-fluid">
         <div class="row mt-3">
             <div class="col-md-3 searcharea">
