--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container-fluid">
         <div class="row mt-3">
-            <div class="col-md-3 searcharea">
+            <div class="col-md-3 search">
                 <h2 class="text-secondary">Search for a city:</h2>
                 <div class="input-group mb-3">
                     <button class="btn btn-primary" id="searchbtn" type="submit">
