--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="container-fluid">
         <div class="row mt-3">
             <div class="col-md-3 search">
-                <h2 class="text-secondary">Search for a city:</h2>
+                <h2 class="text-danger">Search:</h2>
                 <div class="input-group mb-3">
-                    <button class="btn btn-primary" id="searchbtn" type="submit">
+                    <button class="btn btn-danger" id="searchbtn" type="submit">
                         <i class="material-icons">search</i>
                     </button>
                     <input type="text" class="form-control" id="searchinput" type="search" aria-label="Search">
@@ -37,6 +37,7 @@
             </div>
         </div>
     </div>
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
